# llmbase

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  config.yaml  llmbase.py  pyproject.toml  requirements.txt  wsgi.py
docs/: api-reference.md  autonomous-learning.md  customization.md  plugin-development.md  self-healing.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ArticleCard.tsx  Icon.tsx  Layout.tsx  Loading.tsx  Markdown.tsx  Tag.tsx  TrailRecorder.tsx
frontend/src/lib/: api.ts  theme.tsx  trail.tsx
frontend/src/pages/: ArticleDetail.tsx  Dashboard.tsx  Explore.tsx  Graph.tsx  Health.tsx  Ingest.tsx  QA.tsx  Search.tsx  Trails.tsx  Wiki.tsx
skills/llmwiki/: SKILL.md
tests/: test_chunk_cache.py  test_normalize.py  test_pipeline.py  test_query_promote.py  test_sections.py  test_split.py  test_v064_features.py  test_web_articles.py  test_xllm_key.py
tests/fixtures/taixu/: README.md  focheng_zongyao_lun_head50kb.md  sanming_lun.md  xinjing_shiyi.md
tools/: agent_api.py  atomic.py  browser.py  chunk_cache.py  cli.py  compile.py  config.py  entities.py  export.py  ingest.py  lint.py  llm.py  normalize.py  operations.py  pdf.py  query.py  resolve.py  search.py  sections.py  split.py  taxonomy.py  web.py  wikisource.py  worker.py  xici.py
tools/lint/: checks.py  fixes.py
tools/pipeline/: __init__.py  driver.py  lock.py  log.py  state.py
tools/refs/: __init__.py  cbeta.py  ctext.py  wikisource.py
